--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,6 @@
 </head>
 <body>
   <app-root></app-root>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.js"></script>
 </body>
 </html>
